# yt-dlp-gui

./: .cursorrules  .gitignore  AGENTS.md  LICENSE  README.md  app.py  commitlint.config.js  download_manager.py  i18n.py  main.py  pyproject.toml  requirements.txt  settings_window.py  setup_wizard.py  state.py  tray.py  updater.py  utils.py  yt-dlp-gui.spec
.cursor/rules/: coding-conventions.mdc  commit-message.mdc  error-handling.mdc  testing-conventions.mdc  threading-and-ui.mdc  ui-patterns.mdc  update-locales.mdc  update-readme-on-feature.mdc
install-runtime/: main.py
launcher/: main.py
locales/: en.json  he.json
packaging/: install-runtime.spec  launcher.spec  update-helper.spec
scripts/: build.ps1  build_windows_release.ps1  generate_icons.py  generate_update_manifest.py  installer.iss
src/: __init__.py  app.py  clipboard_dnd.py  download_context.py  download_context_ops.py  download_handler.py  download_manager.py  download_progress.py  download_session.py  ffmpeg_installer.py  ffmpeg_utils.py  format_parser.py  i18n.py  install_layout.py  layout_utils.py  metadata_pickers.py  pyside6_installer.py  queue_controller.py  runtime_paths.py  settings_constants.py  settings_window.py  setup_wizard.py  state.py  tray.py  tray_policy.py  updater.py  utils.py
tests/: conftest.py  test_download_manager.py  test_download_progress.py  test_download_session.py  test_generate_update_manifest.py  test_main_entry.py  test_queue.py  test_runtime_bootstrap.py  test_setup_wizard.py  test_state.py  test_tray.py  test_updater.py  test_utils.py
update_helper/: main.py
(+38 files in other folders)
